--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,8 @@
     }],
     "stage-2"
   ],
+  "ignore": [
+    "./src/assets/libs/js/mui.min.js"
+  ],
   "plugins": ["transform-vue-jsx", "transform-runtime"]
 }
